# briefen-me

./: .dockerignore  .env.example  .gitignore  config.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
app/: __init__.py
app/models/: bio.py  click.py  url.py  user.py
app/routes/: api.py  auth.py  web.py
app/services/: ai_service.py  analytics_service.py  email_service.py  slug_generator.py  storage_service.py  url_cleaner.py  url_validator.py  web_scraper.py
app/static/css/: style.css
app/static/js/: shortener.js
app/templates/: base.html  create.html  dashboard.html  expired.html  forgot_password_confirmation.html  index.html
app/utils/: auth_decorators.py
chrome-extension/: manifest.json  popup.html  popup.js
migrations/versions/: c810fce09bf0_add_expires_at_to_url_model.py
tests/: conftest.py  test_analytics_api.py  test_create_api.py  test_edit_api.py  test_redirect.py  test_url_model.py
