[project]
name = "briefen-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-limiter>=3.5.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=21.2.0",
    "qrcode[pil]>=7.4.2",
    "flask-cors>=6.0.1",
    "pyjwt>=2.10.1",
    "user-agents>=2.2.0",
    "google-cloud-storage>=2.14.0",
]
